Improvements to event driven API Fixed some minor bugs Prepare to migrate examples to new API TODO: Update README.md